adicionando o modal, finalizando o css e responsividade

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -229,6 +229,8 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    cursor: pointer;
   }
 
   .hamburger-lines .line {
