--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,9 @@ nav button {
     cursor: pointer;
 }
 
+#close-menu{
+    display: none;
+}
 
 .line {
 
@@ -224,9 +227,9 @@ footer {
 
 .hamburger-lines {
     display: block;
-    height: 20px;
-    width: 20px;
-    display: flex;
+    height: 18px;
+    width: 25px;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
 
@@ -252,7 +255,29 @@ footer {
 .resume.none{
     display: none;
 }
- 
+
+.nothing-here {
+    display: flex;
+    margin-top: 20px;
+    flex-direction: column;
+    align-items:center;
+
+    justify-content: center;
+
+    padding: 20px;
+
+}
+
+.nothing-here img{
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.nothing-here p, h2{
+    margin-bottom: 4px;
+    text-align: center;
+} 
   
   
   
