--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
 
-    background-color: rgba(0,0,0, 0.3);
+    background-color: rgba(0,0,0, 0.5);
 
     position: fixed;
     top: 0;
@@ -11,40 +11,24 @@
     align-items: center;
     justify-content: center;
 
-    opacity: 0;
+    opacity: 1;
     visibility: hidden;
   
     z-index: 999;
 }
 
 .modal-overlay.on {
-    opacity: 1; 
+    opacity: 1;
     visibility: visible;
 }
 
-.modal-container {
-    width: 252px;
-    height:100%;
-
-    position:fixed;
-    right: 0;
-    top:0;
-
-    background-color:#333333;
-
-}
 
 .modal-itens {
     display: flex;
     flex-direction: column;
 }
 
-#close {
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    margin: 20px;
-}
+
 
 .modal-itens button {
     background-color:#333333;
@@ -71,4 +55,49 @@
     .modal-container {
         width: 351px;
     }
+}
+
+.modal-itens-you-sure {
+    margin: 20px;
+    padding: 20px 40px;
+    width: auto;
+    height: auto;
+    background-color: #ffffff;
+
+    text-align: center;
+
+    border-radius: 4px;
+    box-shadow: 2px 2px 15px 1px rgba(0, 0, 0, 0.607) ;
+}
+
+.modal-itens-you-sure img {
+    width: 50px;
+    height: 50px;
+    
+
+    margin-bottom: 10px;
+}
+
+.modal-itens-you-sure span {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.modal-itens-you-sure button {
+    
+    margin: 8px 5px;
+
+    width: 180px;
+    padding: 8px;
+
+    border-radius: 4px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.modal-itens-you-sure button:last-child{
+    background-color: #333333;
+    color: #FFFFFF;
+    letter-spacing: 1px;
 }
